--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -36,12 +36,6 @@
     font-weight: 700;
 }
 
-.hero-hand-icon {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
 .hero-hand-icon img {
     width: 105px; 
 }
@@ -66,4 +60,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.hero-right img {
+    max-width: 60%;
+    max-height: 60%;
+    object-fit: contain;
 }
