--- a/frontend/src/Components/NewProducts/NewProducts.css
+++ b/frontend/src/Components/NewProducts/NewProducts.css
@@ -3,8 +3,7 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    height: 90vh;
-    padding-bottom: 180px;
+    margin-bottom: 100px;
 }
 
 .new-products h1 {
