--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     display: flex;
-    flex-direction: center;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 50px;
@@ -14,7 +14,7 @@
 
 .footer-logo p {
     color: #383838;
-    font-size: 30px;
+    font-size: 46px;
     font-weight: 600;
 }
 
@@ -43,12 +43,8 @@
 }
 
 .footer-icons-container {
-    width: 40px;
-    height: 40px;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 10px;
+    padding-bottom: 6px;
     background: #fbfbfb;
     border: 1px solid #ebebeb;
     box-sizing: border-box;
