--- a/frontend/src/Components/Item/Item.css
+++ b/frontend/src/Components/Item/Item.css
@@ -28,3 +28,10 @@
     transform: scale(1.05);
     transition: 0.6s;
 }
+
+.item img {
+    width: 100%;
+    height: 370px;         /* Set a fixed height */
+    object-fit: cover;     /* Ensures the image fills the area and crops if necessary */
+    border-radius: 10px;   /* Optional: makes the image corners rounded */
+}
