--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -3,9 +3,10 @@
 }
 
 .hero {
-    height: 100vh;
+    height: 65vh;
     background: linear-gradient(180deg, #fde1ff, #e1ffea22 60%);
     display: flex;
+    animation: fadeInLeft 1s ease forwards;
 }
 
 .hero-left {
@@ -66,4 +67,15 @@
     max-width: 60%;
     max-height: 60%;
     object-fit: contain;
+}
+
+@keyframes fadeInLeft {
+    from {
+        opacity: 0;
+        transform: translateX(-50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
