--- a/frontend/src/Components/Popular/Popular.css
+++ b/frontend/src/Components/Popular/Popular.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    height: 60vh;
+    height: fit-content;
     padding-bottom: 60px;
 }
 
