Now when you click on logo on navigation bar, it will take you to main shop page and underline 'shop'

--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -16,6 +16,9 @@
     font-size: 38px;
     font-weight: 600;
 }
+.nav-logo p:hover{
+    cursor: pointer;
+}
 
 .nav-logo img {
     max-width: 100%;
