--- a/frontend/src/Pages/CSS/ShopCategory.css
+++ b/frontend/src/Pages/CSS/ShopCategory.css
@@ -25,7 +25,7 @@
     margin: 20px 170px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    row-gap: 80px;
+    gap: 70px 25px;
 }
 
 .shopcategory-loadmore {
