--- a/frontend/src/Components/ProductDisplay/ProductDisplay.css
+++ b/frontend/src/Components/ProductDisplay/ProductDisplay.css
@@ -1,10 +1,13 @@
 .productdisplay {
     display: flex;
-    margin: 0px 170px;
+    margin: 100px 170px;
 }
 .productdisplay-img {
     flex: 1;
     max-width: 500px;
+    aspect-ratio: 1 / 1;
+    align-items: center;
+    justify-content: center;
 }
 
 .productdisplay-left {
@@ -20,6 +23,7 @@
 }
 .productdisplay-img-list img {
     width: 120px;
+    height: 100%;
     object-fit: cover;
     border-radius: 6px;
     cursor: pointer;
@@ -29,8 +33,9 @@
 }
 
 .productdisplay-main-img {
-    width: 100%;
-    object-fit: contain;
+    width: 90%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 10px;
 }
 
