--- a/frontend/src/Components/NewProducts/NewProducts.css
+++ b/frontend/src/Components/NewProducts/NewProducts.css
@@ -7,9 +7,12 @@
 }
 
 .new-products h1 {
-    color: #171717;
-    font-size: 50px;
-    font-weight: 600;
+    color: #b46fc8;
+    font-size: 42px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+    text-transform: capitalize;
 }
 
 .new-products hr {
