--- a/frontend/src/Components/Popular/Popular.css
+++ b/frontend/src/Components/Popular/Popular.css
@@ -8,9 +8,12 @@
 }
 
 .popular h1 {
-    color: #171717;
-    font-size: 50px;
-    font-weight: 600;
+    color: #b46fc8;
+    font-size: 42px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+    text-transform: capitalize;
 }
 
 .popular hr {
