--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -57,7 +57,6 @@
     align-items: center;
     gap: 45px;
 }
-
 .nav-login-cart button {
     width: 157px;
     height: 58px;
@@ -70,9 +69,14 @@
     background: white;
     cursor: pointer;
 }
-
 .nav-login-cart button:active {
     background: #f3f3f3;
+}
+.nav-login-cart .cart-icon {
+    width: 30px;
+    height: 30px;
+    color: #333; /* example color */
+    cursor: pointer;
 }
 
 .nav-cart-count {
