--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -1,7 +1,8 @@
 .navbar {
     display: flex;
     justify-content: space-around;
-    padding: 10px 16px;
+    align-items: center;
+    padding: 20px 16px;
     box-shadow: 0 1px 3px -2px black;
 }
 
@@ -22,8 +23,7 @@
 
 .nav-logo img {
     max-width: 100%;
-    height: auto;
-    width: 70px;
+    width: 50px;
 }
 
 .nav-menu {
@@ -68,6 +68,7 @@
     font-weight: 500;
     background: white;
     cursor: pointer;
+    margin-left: 20px;
 }
 .nav-login-cart button:active {
     background: #f3f3f3;
@@ -91,4 +92,80 @@
     font-size: 14px;
     background: red;
     color: white;
+}
+
+@media(max-width: 1280px) {
+    .navbar {
+        padding: 12px 40px;
+    }
+
+    .nav-logo img {
+        width: 45px;
+    }
+
+    .nav-logo p {
+        font-size: 28px;
+    }
+
+    .nav-menu {
+        gap: 35px;
+        font-size: 16px;
+    }
+
+    .nav-login-cart {
+        gap: 30px;
+    }
+
+    .nav-login-cart button {
+        width: 130px;
+        height: 50px;
+        font-size: 16px;
+    }
+
+    .nav-cart-count {
+        margin-left: -40px;
+        font-size: 13px;
+        width: 20px;
+        height: 20px;
+    }
+}
+
+@media (max-width: 994px) {
+    .navbar {
+      padding-bottom: 12px;
+      flex-wrap: wrap;
+    }
+    
+    .nav-logo {
+      order: 1;
+      flex: 1 1 auto;
+    }
+    
+    .nav-login-cart {
+      order: 2;
+      flex: 1 1 auto;
+      justify-content: flex-end;
+    }
+    
+    .nav-menu {
+      order: 3;
+      width: 100%;
+      justify-content: center;
+      margin-top: 12px;
+      flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 570px) {
+    .navbar {
+        padding: 12px 8px;
+    }
+    .nav-login-cart button {
+        width: 100px;
+        height: 40px;
+        font-size: 16px;
+    }
+    .nav-logo p{
+        font-size: 25px;
+    }
 }
