--- a/frontend/src/Components/Newsletter/Newsletter.css
+++ b/frontend/src/Components/Newsletter/Newsletter.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     margin: auto;
-    padding: 80px 200px;
+    padding: 80px 50px;
     margin-bottom: 50px;
     background: #b28aeb48;
     gap: 30px;
@@ -40,6 +40,7 @@
     border: none;
     outline: none;
     color: #616161;
+    background: transparent;
     font-family: Poppins;
     font-size: 16px;
 }
@@ -52,4 +53,60 @@
     color: white;
     font-size: 16px;
     cursor: pointer;
+}
+
+@media (max-width: 1280px) {
+    .newsletter div {
+        width: 90%;
+    }
+    .newsletter input {
+        width: 70%;
+        min-width: 200px;
+    }
+    .newsletter button {
+        width: auto;
+        min-width: 120px;
+    }
+}
+
+@media (max-width: 938px) {
+    .newsletter h1 {
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 728px) {
+    .newsletter div {
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        padding: 0;
+        gap: 10px;
+        border-radius: 50px;
+        background: transparent;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .newsletter input {
+        background-color: white;
+    }
+
+    .newsletter input,
+    .newsletter button {
+        width: 90%;
+        height: 50px;
+        border-radius: 50px;
+        box-sizing: border-box;
+    }
+
+    .newsletter input {
+        margin-left: 0;
+        padding: 0 15px;
+    }
+
+    .newsletter button {
+        padding: 0 20px;
+        text-align: center;
+    }
 }
