--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    margin-top: 100px;
     padding-top: 20px;
     background: linear-gradient(180deg, #fde1ff, #e1ffea22 60%);
 }
